WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250576
[WebRTC] Fix -Wunused-but-set-variable warnings in the libvpx project
https://bugs.webkit.org/show_bug.cgi?id=250576
Summary
[WebRTC] Fix -Wunused-but-set-variable warnings in the libvpx project
David Kilzer (:ddkilzer)
Reported
2023-01-13 07:46:38 PST
Fix -Wunused-but-set-variable warnings in the libvpx project: /Volumes/Data/worker/macOS-AppleSilicon-Ventura-Debug-Build-EWS/build/Source/ThirdParty/libwebrtc/Source/third_party/libvpx/source/libvpx/vp9/encoder/vp9_mbgraph.c:246:9: error: variable 'arf_y_in_offset' set but not used [-Werror,-Wunused-but-set-variable] int arf_y_in_offset = arf_y_offset; ^ /Volumes/Data/worker/macOS-AppleSilicon-Ventura-Debug-Build-EWS/build/Source/ThirdParty/libwebrtc/Source/third_party/libvpx/source/libvpx/vp9/encoder/vp9_mbgraph.c:247:9: error: variable 'gld_y_in_offset' set but not used [-Werror,-Wunused-but-set-variable] int gld_y_in_offset = gld_y_offset; ^ Originally found by this EWS build for
Bug 250431
: <
https://ews-build.webkit.org/#/builders/85/builds/2919
> Same as upstream commit: vp9,update_mbgraph_frame_stats: rm unused variables
https://github.com/webmproject/libvpx/commit/a165f4ba64ec8c992ca57a1b4444cd4a19527dde
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-01-13 07:47:03 PST
<
rdar://problem/104224212
>
David Kilzer (:ddkilzer)
Comment 2
2023-01-13 07:57:13 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8624
David Kilzer (:ddkilzer)
Comment 3
2023-01-13 08:44:40 PST
(In reply to David Kilzer (:ddkilzer) from
comment #2
)
> Pull request:
https://github.com/WebKit/WebKit/pull/8624
Playing whack-a-mole now (not sure why I don't see these all at once): /Volumes/Data/worker/iOS-16-Build-EWS/build/Source/ThirdParty/libwebrtc/Source/third_party/libvpx/source/libvpx/vp9/encoder/vp9_encodeframe.c:831:14: error: variable 'ysignal' set but not used [-Werror,-Wunused-but-set-variable] uint8_t *ysignal = x->plane[0].src.buf; ^ /Volumes/Data/worker/iOS-16-Build-EWS/build/Source/ThirdParty/libwebrtc/Source/third_party/libvpx/source/libvpx/vp9/encoder/vp9_encodeframe.c:832:14: error: variable 'usignal' set but not used [-Werror,-Wunused-but-set-variable] uint8_t *usignal = x->plane[1].src.buf; ^ /Volumes/Data/worker/iOS-16-Build-EWS/build/Source/ThirdParty/libwebrtc/Source/third_party/libvpx/source/libvpx/vp9/encoder/vp9_encodeframe.c:833:14: error: variable 'vsignal' set but not used [-Werror,-Wunused-but-set-variable] uint8_t *vsignal = x->plane[2].src.buf; ^ This was fixed in upstream commit: Fix some instances of -Wunused-but-set-variable.
https://github.com/webmproject/libvpx/commit/fc04a9491ebaaa8e2b1c7c8e0587c8a1873531d6
EWS
Comment 4
2023-01-13 21:35:31 PST
Committed
258906@main
(fa03411b2de6): <
https://commits.webkit.org/258906@main
> Reviewed commits have been landed. Closing PR #8624 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug