[WebRTC] Fix -Wunused-but-set-variable warnings in the libvpx project https://bugs.webkit.org/show_bug.cgi?id=250576 <rdar://104224212>

Reviewed by Saam Barati.

Fix -Wunused-but-set-variable warnings by merging upstream
libvpx commits:
    a165f4ba64ec8c992ca57a1b4444cd4a19527dde
    fc04a9491ebaaa8e2b1c7c8e0587c8a1873531d6

* Source/ThirdParty/libwebrtc/Source/third_party/libvpx/source/libvpx/vp8/encoder/bitstream.c:
(vp8_update_coef_probs):
* Source/ThirdParty/libwebrtc/Source/third_party/libvpx/source/libvpx/vp9/encoder/vp9_encodeframe.c:
(skin_sb_split):
(choose_partitioning):
* Source/ThirdParty/libwebrtc/Source/third_party/libvpx/source/libvpx/vp9/encoder/vp9_mbgraph.c:
(update_mbgraph_frame_stats):
* Source/ThirdParty/libwebrtc/Source/third_party/libvpx/source/libvpx/vpx_ports/x86.h:

Canonical link: https://commits.webkit.org/258906@main